--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
     "vue": "^3.0.0",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
