--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "html2canvas": "^1.3.3",
     "qrcode.vue": "^3.3.3",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
