--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "html": "^1.0.0",
     "html2canvas": "^1.3.3",
     "qrcode.vue": "^3.3.3",
     "save": "^2.4.0",
