--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "save": "^2.4.0",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
+    "sortablejs": "^1.14.0",
     "vue": "^3.0.0",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.0.0-0"
@@ -29,6 +30,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "vuedraggable": "^4.1.0",
     "webpack-dev-middleware": "^5.2.1",
     "webpack-hot-middleware": "^2.25.1"
   },
